--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/toytopia
 spring.datasource.username=postgres
 spring.datasource.password=Procrafter7
 spring.jpa.hibernate.ddl-auto=create-drop
