--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=toytopiavoucher
 management.endpoints.web.exposure.include=*
 spring.profiles.active=${PRODUCTION:dev}
+auth-api=${AUTH_API}
